# TestYadro

./: CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  main.cpp
src/cell_calculator/: CMakeLists.txt  CellCalculator.cpp  CellCalculator.h
src/file_handler/: CMakeLists.txt  FileHandler.cpp  FileHandler.h
src/task_solver/: CMakeLists.txt  TaskSolver.cpp  TaskSolver.h
src/utils/: CMakeLists.txt  Error.h  ParsingData.h
test/: CMakeLists.txt  YadroTaskTest.cpp
test/resource/test_file_parse/: IncorrectCellExpression.csv  IncorrectCellExpressionFormat.csv  IncorrectColumnName.csv  IncorrectLineNumber.csv  IncorrectTitle.csv  LessNumberOfCells.csv  MoreNumberOfCells.csv  NoCellExpression.csv  NoColumnName.csv  NoLineNumber.csv
test/resource/test_open_file/: IncorrectFileExtension.txt
test/resource/test_success_calculation/: DifficultExample.csv  Expressions.csv  OnlyNumbers.csv
test/resource/test_wrong_calculation/: DivisionByZero.csv  InterrelatedCells.csv
